--- a/components/Portfolio/Projects/projects.json
+++ b/components/Portfolio/Projects/projects.json
@@ -1,20 +1,20 @@
 [
   {
     "id": 1,
-    "title": "My First Project",
+    "title": "Climate Reality: Las Vegas",
     "description": "A simple website for a small business.",
-    "client": "Acme Corporation",
+    "client": "Climate Reality",
     "date_completed": "2023-10-01",
     "skills_applied": ["HTML", "CSS", "JavaScript"],
-    "featured_image": "/osman-talha-dikyar-NMCABEhN0RE-unsplash.jpg"
+    "featured_image": "/images/projects/CRLVHome.png"
   },
   {
     "id": 2,
-    "title": "My Second Project",
+    "title": "Intagly",
     "description": "A more complex website for a larger business, with features such as e-commerce and a blog.",
-    "client": "XYZ Company",
+    "client": "Intagly",
     "date_completed": "2023-11-01",
     "skills_applied": ["HTML", "CSS", "JavaScript", "PHP", "MySQL"],
-    "featured_image": "/ulysse-pointcheval--j6LLsAehUo-unsplash.jpg"
+    "featured_image": "/images/projects/IntaglyHome.png"
   }
 ]
