refactor: rearrange portfolio elements, add logos

--- a/components/Portfolio/Projects/projects.json
+++ b/components/Portfolio/Projects/projects.json
@@ -4,6 +4,7 @@
     "title": "Climate Reality: Las Vegas",
     "description": "A simple website for a small business.",
     "client": "Climate Reality",
+    "client_logo": "/images/logos/ClimateRealityLogo.png",
     "date_completed": "2023-10-01",
     "skills_applied": ["HTML", "CSS", "JavaScript"],
     "featured_image": "/images/projects/CRLVHome.png"
@@ -13,6 +14,7 @@
     "title": "Intagly",
     "description": "A more complex website for a larger business, with features such as e-commerce and a blog.",
     "client": "Intagly",
+    "client_logo": "/images/logos/IntaglyLogo.png",
     "date_completed": "2023-11-01",
     "skills_applied": ["HTML", "CSS", "JavaScript", "PHP", "MySQL"],
     "featured_image": "/images/projects/IntaglyHome.png"
