--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "ajv": "^8.12.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
