--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@headlessui/react": "^1.7.17",
     "@radix-ui/react-icons": "^1.3.0",
     "ajv": "^8.12.0",
     "axios": "^1.6.0",
