--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@radix-ui/react-icons": "^1.3.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "ajv": "^8.12.0",
     "axios": "^1.6.0",
     "eslint": "8.49.0",
