--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "ajv": "^8.12.0",
     "axios": "^1.6.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.3",
     "framer-motion": "^10.16.4",
-    "next": "^13.5.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.47.0",
     "react-scroll": "^1.9.0"
