--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.47.0",
+    "react-loader-spinner": "^6.1.6",
     "react-scroll": "^1.9.0"
   }
 }
