--- a/components/Portfolio/Projects/projects.json
+++ b/components/Portfolio/Projects/projects.json
@@ -1,32 +1,42 @@
 [
   {
     "id": 1,
-    "title": "Climate Reality: Las Vegas",
-    "description": "Las Vegas chapter of a non-profit organization, The Climate Reality Project.",
-    "client": "Climate Reality",
-    "client_logo": "/images/logos/ClimateRealityLogo.png",
-    "client_url": "https://climaterealitylasvegas.com",
-    "date_completed": "2023-10-01",
-    "skills_applied": ["WordPress", "Website", "Web Design", "UX/UI"],
-    "featured_image": "/images/projects/CRLVHome.png",
-    "is_active": true
+    "title": "Locart",
+    "description": "Mobile design concept for an app that helps people find and support local musicians.",
+    "client": "NA",
+    "logo": "/images/logos/Locart.png",
+    "url": "https://www.figma.com/file/Moxf5Ael1dDkIfu9mYtjox/Locart?type=design&t=LCC87hfnAyuaD79B-6",
+    "date_completed": "On-going",
+    "skills_applied": [
+      "Mobile App Design",
+      "UX/UI",
+      "User Research",
+      "Product Design",
+      "Design System",
+      "Figma"
+    ],
+    "featured_image": "/images/projects/IntaglyHome.png",
+    "is_active": true,
+    "type": "design"
   },
   {
     "id": 2,
-    "title": "Intagly",
-    "description": "3D printing service that connects customers with local 3D printer operators.",
-    "client": "Intagly",
-    "client_logo": "/images/logos/IntaglyLogo.png",
-    "client_url": "https://intagly.com",
-    "date_completed": "2023-11-01",
+    "title": "CommentMe!",
+    "description": "Design concept for a Chrome extension that streamlines the feedback process for web developers.",
+    "client": "NA",
+    "logo": "/images/logos/IntaglyLogo.png",
+    "url": "https://intagly.com",
+    "date_completed": "On-going",
     "skills_applied": [
-      "Flutter",
+      "Web App Design",
       "UX/UI",
       "Web App",
-      "Mobile App",
-      "Product Design"
+      "Product Design",
+      "Design System",
+      "Figma"
     ],
-    "featured_image": "/images/projects/IntaglyHome.png",
-    "is_active": false
+    "featured_image": "NA",
+    "is_active": true,
+    "type": "design"
   }
 ]
