--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^1.7.17",
     "@radix-ui/react-icons": "^1.3.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.2",
     "ajv": "^8.12.0",
     "axios": "^1.6.0",
