chore: update skills applied

--- a/components/Portfolio/Projects/projects.json
+++ b/components/Portfolio/Projects/projects.json
@@ -4,16 +4,17 @@
     "title": "Aurelius",
     "description": "A Chrome extension that generates quotes from ancient Stoic philosophers. Built with React and TypeScript.",
     "client": "NA",
-    "logo": "/images/logos/CommentMe.png",
+    "logo": "NA",
     "url": "https://github.com/noliveira95/aurelius",
     "date_completed": "On-going",
     "skills_applied": [
-      "Web App Design",
-      "UX/UI",
-      "Web App",
-      "Product Design",
-      "Design System",
-      "Figma"
+      "Chrome Extension",
+      "APIs",
+      "HTML",
+      "CSS",
+      "JavaScript",
+      "React",
+      "TypeScript"
     ],
     "featured_image": "/images/projects/Aurelius.png",
     "is_active": true,
