--- a/components/Portfolio/Projects/projects.json
+++ b/components/Portfolio/Projects/projects.json
@@ -3,11 +3,12 @@
     "id": 1,
     "title": "Aurelius",
     "description": "A Chrome extension that generates quotes from ancient Stoic philosophers. Built with React and TypeScript.",
-    "client": "NA",
-    "logo": "NA",
+    "client": null,
+    "logo": null,
     "url": "https://github.com/noliveira95/aurelius",
-    "date_completed": "On-going",
-    "skills_applied": [
+    "url2": null,
+    "dateCompleted": null,
+    "skillsApplied": [
       "Chrome Extension",
       "APIs",
       "HTML",
@@ -16,19 +17,20 @@
       "React",
       "TypeScript"
     ],
-    "featured_image": "/images/projects/Aurelius.png",
-    "is_active": true,
-    "type": "dev"
+    "featuredImage": "/images/projects/Aurelius.png",
+    "isActive": true,
+    "projectType": "dev"
   },
   {
     "id": 2,
     "title": "Locart",
     "description": "Mobile design concept for an app that helps people find and support local musicians.",
-    "client": "NA",
+    "client": null,
     "logo": "/images/logos/Locart.png",
     "url": "https://www.figma.com/file/Moxf5Ael1dDkIfu9mYtjox/Locart?type=design&node-id=389%3A187&mode=design&t=cLf0I6ga9R1hMoPA-1",
-    "date_completed": "On-going",
-    "skills_applied": [
+    "url2": null,
+    "dateCompleted": null,
+    "skillsApplied": [
       "Mobile App Design",
       "UX/UI",
       "User Research",
@@ -36,19 +38,20 @@
       "Design System",
       "Figma"
     ],
-    "featured_image": "/images/projects/Aurelius.png",
-    "is_active": true,
-    "type": "design"
+    "featuredImage": "/images/projects/Aurelius.png",
+    "isActive": true,
+    "projectType": "design"
   },
   {
     "id": 3,
     "title": "CommentMe!",
     "description": "Design concept for a Chrome extension that streamlines the feedback process for web developers.",
-    "client": "NA",
+    "client": null,
     "logo": "/images/logos/CommentMe.png",
     "url": "https://www.figma.com/file/p0l6ljZb2kiwOBnxpZYHjl/CommentMe-v1?type=design&node-id=74%3A85&mode=design&t=u3cF8AfPq4xkPPME-1",
-    "date_completed": "On-going",
-    "skills_applied": [
+    "url2": null,
+    "dateCompleted": null,
+    "skillsApplied": [
       "Web App Design",
       "UX/UI",
       "Web App",
@@ -56,8 +59,8 @@
       "Design System",
       "Figma"
     ],
-    "featured_image": "/images/projects/Aurelius.png",
-    "is_active": true,
-    "type": "design"
+    "featuredImage": "/images/projects/Aurelius.png",
+    "isActive": true,
+    "projectType": "design"
   }
 ]
