feat: add second button for projects
Add second button if url2 exists.
Refactor CSS for Portfolio section.
Adjust max width of section and paragraph.

--- a/components/Portfolio/Projects/projects.json
+++ b/components/Portfolio/Projects/projects.json
@@ -28,7 +28,7 @@
     "client": null,
     "logo": "/images/logos/Locart.png",
     "url": "https://www.figma.com/file/Moxf5Ael1dDkIfu9mYtjox/Locart?type=design&node-id=389%3A187&mode=design&t=cLf0I6ga9R1hMoPA-1",
-    "url2": null,
+    "url2": "https://www.behance.net/gallery/192525569/Locart-A-UX-Case-Study",
     "dateCompleted": null,
     "skillsApplied": [
       "Mobile App Design",
