feat: add images for projects
Add new images for projects CommentMe and Locart.
Adjust project image sizing.
Add opacity and hover transition.

--- a/components/Portfolio/Projects/projects.json
+++ b/components/Portfolio/Projects/projects.json
@@ -38,7 +38,7 @@
       "Design System",
       "Figma"
     ],
-    "featuredImage": "/images/projects/Aurelius.png",
+    "featuredImage": "/images/projects/Locart.png",
     "isActive": true,
     "projectType": "design"
   },
@@ -59,7 +59,7 @@
       "Design System",
       "Figma"
     ],
-    "featuredImage": "/images/projects/Aurelius.png",
+    "featuredImage": "/images/projects/CommentMe.png",
     "isActive": true,
     "projectType": "design"
   }
