--- a/components/Portfolio/Projects/projects.json
+++ b/components/Portfolio/Projects/projects.json
@@ -5,8 +5,8 @@
     "description": "Mobile design concept for an app that helps people find and support local musicians.",
     "client": null,
     "logo": "/images/logos/Locart.png",
-    "url": "https://www.figma.com/file/Moxf5Ael1dDkIfu9mYtjox/Locart?type=design&node-id=389%3A187&mode=design&t=cLf0I6ga9R1hMoPA-1",
-    "url2": "https://www.behance.net/gallery/192525569/Locart-A-UX-Case-Study",
+    "url": "https://www.behance.net/gallery/192525569/Locart-A-UX-Case-Study",
+    "url2": "https://www.figma.com/file/Moxf5Ael1dDkIfu9mYtjox/Locart?type=design&node-id=389%3A187&mode=design&t=cLf0I6ga9R1hMoPA-1",
     "cta": "View Case Study",
     "cta2": "View on Figma",
     "dateCompleted": null,
